--- a/app/globals.css
+++ b/app/globals.css
@@ -68,6 +68,15 @@ body {
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground tracking-wide;
+  }
+}
+
+@layer utilities {
+  .heading {
+    @apply font-heading font-medium text-5xl leading-tight 
+  }
+  .text {
+    @apply font-light leading-normal
   }
 }
