create contact section

--- a/app/globals.css
+++ b/app/globals.css
@@ -67,6 +67,9 @@ body {
 	* {
 		@apply border-border;
 	}
+	html{
+		@apply scroll-smooth scroll-pt-32
+	}
 	body {
 		@apply bg-background text-foreground tracking-wide;
 	}
